ufw: add firewall setup role
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 [ ] - Unattended updates
 [x] - Wireguard VPN
 [ ] - Matrix Homeserver
-[ ] - Firewall
+[x] - Firewall
 [ ] - IRC Client
 [ ] - JupyterHub Server
 [ ] - Monitoring
